--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./dist/build.js"></script>
+    <script src="./node_modules/@babel/polyfill/dist/polyfill.js"></script>
+    <script src="./dist/build-compiled.js"></script>
   </body>
 </html>
