--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <script src="./node_modules/@babel/polyfill/dist/polyfill.js"></script>
-    <script src="./dist/build-compiled.js"></script>
+    <script src="./dist/build.js"></script> 
   </body>
 </html>
