--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1">
-    <title>cptj</title>
+    <title>Cache Pas Ta Joie</title>
+    <link rel="icon" href="dist/logoCPTJ.png">
     <link rel="stylesheet" href="style.css">
+    <meta name="Keywords" content="Joie,Bonheur,Positif,CachePasTaJoie">
+    <meta name="Description" content="Site de présentation et de suivi des actualités de Cache Pas Ta Joie">
   </head>
   <body>
     <div id="app"></div>
